Added Spark testing base